# farm-ng-amiga

./: .flake8  .gitignore  .gitmodule  .pre-commit-config.yaml  CMakeLists.txt  README.md  amiga-brain-api.code-workspace  license_header.txt  pyproject.toml  setup.cfg  setup.py
.github/ISSUE_TEMPLATE/: bug-report.yml  config.yml  feature-request.md  feature-request.yml
.github/workflows/: ci.yml  ci_python.yml  format.yml  pypi-release.yml  transfer-issue.yml
examples/camera_client/: main.py
examples/camera_client_gui/: main.py
examples/camera_pipeline/: main.py
examples/canbus_client/: main.py
examples/file_reader/: main.py
farm_ng/core/: events_file_reader.py  events_file_writer.py
farm_ng/oak/: client.py
protos/: CMakeLists.txt
protos/farm_ng/amiga/: amiga.proto
protos/farm_ng/annotations/: annotations.proto
protos/farm_ng/api/: service.proto
protos/farm_ng/canbus/: amiga_v6.proto  canbus.proto  tool_config.proto  tool_control.proto
protos/farm_ng/control/: control.proto
protos/farm_ng/controller/: controller.proto
protos/farm_ng/filter/: filter.proto
protos/farm_ng/gps/: gps.proto
protos/farm_ng/health_monitor/: health_monitor.proto
protos/farm_ng/image/: image.proto
protos/farm_ng/imu/: imu.proto
protos/farm_ng/oak/: oak.proto
protos/farm_ng/people_detection/: people_detection.proto
protos/farm_ng/recorder/: recorder.proto
protos/farm_ng/service/: service.proto
protos/farm_ng/state_estimator/: state_estimator.proto
protos/farm_ng/system_monitor/: system_monitor.proto
protos/farm_ng/track/: track.proto
py/: setup.cfg  setup.py
py/examples/: README.md  can.py
py/examples/bug_dispenser/: main.py  service_config.json
py/examples/camera_aruco_detector/: main.py  requirements.txt  service_config.json
py/examples/camera_calibration/: README.md  main.py  read_oak_calibration.py  service_config.json
py/examples/camera_client/: main.py  main_raw.py  requirements.txt  service_config.json  service_config_oak0.json  service_config_oak1.json
py/examples/camera_client_gui/: main.py  requirements.txt
py/examples/camera_pipeline/: main.py
py/examples/camera_pointcloud/: README.md  main.py  requirements.txt  service_config.json
py/examples/camera_settings/: README.md  camera_settings.json  main.py  service_config.json
py/examples/controller_square/: README.md  main.py  service_config.json
py/examples/controller_track/: README.md  main.py
py/examples/custom_service/: setup.cfg  setup.py
py/examples/custom_service/protos/: two_ints.proto
py/examples/custom_service/src/: client.py  service.py
py/examples/dashboard_settings/: README.md  main.py  service_config.json
py/examples/event_recorder/: README.md  main.py  record_camera_config.json  record_filter_config.json  requirements.txt  service_config.json
py/examples/fastapi_backend/: main.py
py/examples/file_converter/: README.md  main.py  requirements.txt
py/examples/file_reader/: README.md  main.py  requirements.txt  utils.py
py/examples/file_reader_annotations/: main.py  requirements.txt
py/examples/file_reader_can/: README.md  main.py
py/examples/file_reader_gps/: README.md  main.py
py/examples/file_reader_headers/: README.md  main.py
py/examples/file_splitter/: README.md  main.py
py/examples/filter_client/: README.md  main.py  service_config.json
py/examples/go_to_goal/: go_to_goal.json  main.py  service_config.json
py/examples/gps_client/: README.md  main.py  service_config.json
py/examples/lidar_client/: main.py  service_config.json
py/examples/monitor_app/: config.json  main.py  requirements.txt
py/examples/motor_states_stream/: README.md  main.py  requirements.txt  service_config.json
py/examples/multi_client_geoimage/: README.md  config.json  main.py
py/examples/multi_client_subscriber/: README.md  config.json  main.py
py/examples/pendant_state/: README.md  main.py  service_config.json
py/examples/people_detection/: README.md  client.py  main.py  requirements.txt  service.py
py/examples/poe_switch/: README.md  main.py  ping.py  ping_camera.py  reset.py  reset_camera.py  reset_poe.py  reset_port.py  service_config.json
py/examples/record_track/: README.md  main.py  service_config.json
py/examples/recorder_annotation_client/: annotate_sender.py  main.py  service_config.json
py/examples/service_client/: README.md  client.py  config.json  genprotos.py  service.py  two_ints.proto  two_ints_pb2.py  two_ints_pb2.pyi  two_ints_pb2_grpc.py
py/examples/service_counter/: README.md  client.py  counter.py  service_config.json
py/examples/service_propagation/: README.md  agent.py  client.py  config.json  storage.py  supervisor.py
py/examples/square_track/: README.md  main.py  service_config.json
py/examples/tool_control/: README.md  main.py  requirements.txt  service_config.json
py/examples/tool_statuses/: README.md  main.py
py/examples/track_and_tool_planner/: README.md  execute.py  plan.py  service_config.json  tool_state.json  track.json  track_planner.py
py/examples/track_follower/: README.md  main.py  service_config.json
py/examples/track_planner/: main.py  requirements.txt  service_config.json  streamlit.py  track_planner.py
py/examples/track_plotter/: README.md  main.py  requirements.txt
py/examples/track_recorder/: README.md  main.py
py/examples/twist_codelet_debug/: README.md  main.py  service_config.json
py/examples/vehicle_twist/: README.md  main.py  requirements.txt  virtual_keyboard.py
py/examples/virtual_joystick/: README.md  main.py  requirements.txt
py/farm_ng/canbus/: canbus_client.py  packet.py  request_reply.py
py/farm_ng/control/: utils.py
py/farm_ng/controller/: controller_client.py
py/farm_ng/gps/: gps_client.py
py/farm_ng/imu/: __init__.py
py/farm_ng/oak/: __init__.py  camera_client.py  client.py
py/farm_ng/service/: service.py  service_client.py
py/tests/: __init__.py  test_annotations.py  test_canbus.py  test_controller.py  test_core.py  test_oak.py  test_package.py  test_packet.py  test_state_estimator.py
tests/: test_core.py  test_oak.py
(+12 files in other folders)
