[metadata]
name = farm_ng_amiga
version = 0.0.9
description = Amiga development kit for third party hardware or software extensions
long_description = file: README.md
long_description_content_type = text/markdown
author = farm-ng Inc.
author_email = info@farm-ng.com
url = https://github.com/farm-ng/farm-ng-amiga
download_url = https://github.com/farm-ng/farm-ng-amiga
keywords = robotics
license_files = LICENSE
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: Other/Proprietary License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Topic :: Software Development
    Framework :: Robot Framework

[options]
python_requires = >=3.6
setup_requires =
    wheel
    sophus
    farm-ng-core
install_requires =
    protobuf
    grpcio
    farm-ng-package
    farm-ng-core
    sophus
tests_require =
    pytest
    pytest-runner
    pytest-asyncio
    pytest-mypy
test_suite = tests

package_dir =
    = py
packages =
    farm_ng
    farm_ng.canbus
    farm_ng.oak
    farm_ng.people_detection
    farm_ng.service

[options.extras_require]
dev =
    pytest==7.1.2
    pytest-asyncio==0.19.0
    pytest-mypy==0.9.1
    pylint-protobuf==0.20.2
    pre-commit==2.20.0
    mypy==0.971
    types-protobuf
    pylint
    grpcio-tools
    mypy-protobuf
    pylint-protobuf==0.20.2

[mypy]
files = py/sophus, py/tests, py/examples
ignore_missing_imports = True

[options.package_data]
farm_ng.oak =
    *.proto

farm_ng.canbus =
    *.proto

farm_ng.people_detection =
    *.proto

farm_ng.service =
    *.proto
