[metadata]
name = farm_ng_amiga
version = 2.3.1-dev
description = Amiga development kit for third party hardware or software extensions
long_description = file: README.md
long_description_content_type = text/markdown
author = farm-ng Inc.
author_email = info@farm-ng.com
url = https://github.com/farm-ng/farm-ng-amiga
download_url = https://github.com/farm-ng/farm-ng-amiga
keywords = robotics
license_files = LICENSE
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: Other/Proprietary License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Topic :: Software Development
    Framework :: Robot Framework

[options]
python_requires = >=3.6
setup_requires =
    wheel
    # temporary until released
    farm-ng-core
install_requires =
    protobuf
    grpcio
    # temporary until released
    farm_ng_core
tests_require =
    pytest
    pytest-runner
    pytest-asyncio
    pytest-mypy
test_suite = tests

package_dir =
    = py
packages =
    farm_ng
    farm_ng.amiga
    farm_ng.canbus
    farm_ng.gps
    farm_ng.oak
    farm_ng.imu
    farm_ng.filter
    farm_ng.track

[options.extras_require]
dev =
    pytest
    pytest-asyncio
    pytest-mypy
    pylint-protobuf
    pre-commit
    mypy
    types-protobuf
    pylint
    grpcio-tools
    mypy-protobuf
    pylint-protobuf

[mypy]
files = py/tests, py/examples
ignore_missing_imports = True
# types-protobuf fix: https://github.com/python/typeshed/issues/7519
namespace_packages = True

[options.package_data]
farm_ng.amiga =
    *.proto

farm_ng.canbus =
    *.proto

farm_ng.gps =
    *.proto

farm_ng.oak =
    *.proto

farm_ng.filter =
    *.proto

farm_ng.track =
    *.proto
