[metadata]
name = farm-ng-service-example
version = 0.0.1
description = Package example to demonstrate farm-ng service development.
author = farm-ng Inc.
author_email = info@farm-ng.com
url = https://github.com/farm-ng/farm-ng-amiga
download_url = https://github.com/farm-ng/farm-ng-amiga
keywords = robotics
license_files = LICENSE
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: Other/Proprietary License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Topic :: Software Development
    Framework :: Robot Framework

[options]
python_requires = >=3.6
setup_requires =
    wheel
install_requires =
    protobuf
    grpcio
    farm-ng-package
    farm-ng-amiga

package_dir =
    = src
